# windsurf-starter-template

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: dependency-update.md
.github/workflows/: ci.yml
.windsurf/: agent_settings.json  mcp_config.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_STANDARDS.md
docs/mcp_guides/: MEMORY_MCP_GUIDE.md  SEQUENTIAL_THINKING_MCP_GUIDE.md
docs/windsurf_guides/: MEMORIES_GUIDE.md  RULES_GUIDE.md  WORKFLOWS_GUIDE.md
src/: __init__.py  config.py  main.py
src/tools/: example_tool.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_integration.py
tests/unit/: __init__.py  test_example_tool.py
